# simple-boot

./: .gitignore  CMakeLists.txt  Makefile  common.cmake  compiler.cmake
appl/: CMakeLists.txt  Makefile
appl/fw/inc/: flash.h  gpio.h  uart.h
appl/fw/src/: flash.c  main.c  uart.c
appl/linker/: stm32f30_flash.ld
appl/sys/inc/: stm32f3xx_it.h
appl/sys/src/: assert.c  system_stm32f3xx.c
boot/: CMakeLists.txt  Makefile
boot/fw/inc/: mcu.h
boot/fw/src/: flash.c  gpio.c  main.c
boot/linker/: stm32f30_flash.ld
fw/inc/: dbg.h  flash.h  gpio.h  uart.h  xmodem.h
fw/src/: flash.c  gpio.c  main.c  mcu.c  uart.c  xmodem.c
hal/: CMakeLists.txt
hal/inc/: stm32f3xx_hal_conf.h
linker/: stm32f30_flash.ld
sys/: CMakeLists.txt
sys/inc/: assert.h
sys/src/: assert.c  stm32f3xx_it.c
